# projeto_bootcamp_python

./: .gitignore  README.md  kpi.py  main.py
aula_01/: README.md  kpi.py
aula_02/: README.md  desafios.py  exercicios.py
aula_03/: README.md  desafio.py  desafio_gabarito.py  exercicios.py
aula_04/: README.md  desafio.py  exercicios.py  leitor_arquivos.py
aula_06/: .flake8  .pre-commit-config.yaml  README.md  main.py  main02.py  pyproject.toml
aula_07/: etl.py
